--- a/src/main/resources/view/course.fxml
+++ b/src/main/resources/view/course.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -28,15 +30,19 @@
 
         <!-- Input Form -->
         <HBox fx:id="imagehbox" alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Student.css">
-            <GridPane alignment="CENTER" hgap="15" prefHeight="212.0" prefWidth="338.0" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
+            <ImageView fx:id="backButton" fitHeight="41.0" fitWidth="68.0" onMouseClicked="#backButton" pickOnBounds="true" preserveRatio="true">
+                <Image url="@../../../../../../Downloads/back.png" />
+            </ImageView>
+         <AnchorPane prefHeight="226.0" prefWidth="124.0" />
+            <GridPane alignment="CENTER" hgap="15" prefHeight="220.0" prefWidth="438.0" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
                     <ColumnConstraints percentWidth="70" />
                 </columnConstraints>
                 <rowConstraints>
                     <RowConstraints vgrow="SOMETIMES" />
-                    <RowConstraints vgrow="SOMETIMES" />
-                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="35.2" minHeight="35.2" prefHeight="35.2" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="35.19999999999999" minHeight="35.19999999999999" prefHeight="35.19999999999999" vgrow="SOMETIMES" />
                     <RowConstraints vgrow="SOMETIMES" />
                 </rowConstraints>
 
@@ -81,8 +87,8 @@
         </HBox>
 
         <!-- Action Buttons -->
-        <HBox alignment="CENTER" maxWidth="Infinity" spacing="20">
-            <Button fx:id="btnAdd" onAction="#handleAddCourse" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Save">
+        <HBox alignment="CENTER" maxWidth="Infinity" prefHeight="59.0" prefWidth="870.0" spacing="20">
+            <Button fx:id="btnSave" onAction="#handleSaveCourse" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Save">
                 <font><Font size="14.0" /></font>
                 <tooltip><Tooltip text="Save course details" /></tooltip>
             </Button>
