--- a/src/main/resources/view/user.fxml
+++ b/src/main/resources/view/user.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -68,9 +69,6 @@
                 <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtPassword" promptText="Enter Password" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                    <tooltip><Tooltip text="User password" /></tooltip>
-                </TextField>
 
                 <!-- Role -->
                 <Label text="Role:" GridPane.columnIndex="0" GridPane.rowIndex="3">
@@ -79,6 +77,7 @@
                 <TextField fx:id="txtRole" promptText="Enter Role" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <tooltip><Tooltip text="User role (e.g., Admin, User)" /></tooltip>
                 </TextField>
+            <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </GridPane>
 
             <!-- Right Side Placeholder -->
