--- a/src/main/resources/view/student_Manage.fxml
+++ b/src/main/resources/view/student_Manage.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,8 +18,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.controller.StudentPageController">
-    <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
+<AnchorPane prefHeight="754.0" prefWidth="892.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.controller.StudentPageController">
+    <VBox alignment="TOP_CENTER" prefHeight="674.0" prefWidth="910.0" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="-5.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
 
         <!-- Title -->
         <Label alignment="CENTER" maxWidth="Infinity" style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: white; -fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-background-radius: 10; -fx-padding: 15;" text="Student Management System">
@@ -29,7 +31,17 @@
 
         <!-- Form and Image Section -->
         <HBox alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Student.css">
-            <GridPane alignment="CENTER" hgap="15" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
+            <AnchorPane prefHeight="395.0" prefWidth="166.0">
+                <ImageView fx:id="backButtonId" fitHeight="51.0" fitWidth="41.0" layoutX="14.0" layoutY="83.0"
+                           onMouseClicked="#handleBackButton" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../view/image/icons8-back-arrow.gif"/>
+                    </image>
+                </ImageView>
+
+
+            </AnchorPane>
+            <GridPane alignment="CENTER" hgap="15" prefHeight="362.0" prefWidth="442.0" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
                     <ColumnConstraints percentWidth="70" />
@@ -102,7 +114,7 @@
             </GridPane>
 
             <!-- Placeholder for Image or Additional Content -->
-            <VBox alignment="CENTER" spacing="10" style="-fx-padding: 20;">
+            <VBox alignment="CENTER" prefHeight="372.0" prefWidth="154.0" spacing="10" style="-fx-padding: 20;">
                 <Label style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: #3b4cca;" text="Student Profile" />
                 <!-- Removed ImageView; can add dynamic content or placeholder -->
                 <Label style="-fx-text-fill: #6b7280;" text="No Image Available" />
@@ -110,7 +122,7 @@
         </HBox>
 
         <!-- Buttons -->
-        <HBox alignment="CENTER" maxWidth="Infinity" spacing="20">
+        <HBox alignment="CENTER" maxWidth="Infinity" prefHeight="68.0" prefWidth="812.0" spacing="20">
             <Button fx:id="btnSave" onAction="#handleSavePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Save">
                 <font><Font size="14.0" /></font>
                 <tooltip><Tooltip text="Save student details" /></tooltip>
@@ -130,7 +142,7 @@
         </HBox>
 
         <!-- Payment Table -->
-        <TableView fx:id="tblStudent" onMouseClicked="#tableClickOnAction" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tblStudent" onMouseClicked="#tableClickOnAction" prefHeight="301.0" prefWidth="870.0" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
             <columns>
                 <TableColumn fx:id="colStudentId" minWidth="100" prefWidth="100" text="Student ID" />
                 <TableColumn fx:id="colName" minWidth="140" prefWidth="140" text="Name" />
