--- a/src/main/resources/view/user.fxml
+++ b/src/main/resources/view/user.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -30,13 +31,18 @@
         <Separator style="-fx-background-color: #6b7280;" HBox.hgrow="ALWAYS" />
 
         <!-- Input Form -->
-        <HBox fx:id="imagehbox" alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Student.css">
-            <AnchorPane prefHeight="226.0" prefWidth="124.0">
-            <children>
-                  <ImageView fx:id="backButton" fitHeight="41.0" fitWidth="68.0" layoutX="-6.0" layoutY="84.0" onMouseClicked="#backButton" pickOnBounds="true" preserveRatio="true">
-                      <Image url="@../../../../../../Downloads/back.png" />
-                  </ImageView>
-            </children></AnchorPane>
+        <HBox fx:id="imagehbox" alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/ModernStyle.css">
+            <AnchorPane prefHeight="207.0" prefWidth="212.0">
+                <children>
+                    <ImageView fx:id="backButtonId" fitHeight="51.0" fitWidth="41.0" layoutX="14.0" layoutY="83.0" onMouseClicked="#handleBackButton" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@../view/image/icons8-back-arrow.gif" />
+                        </image>
+                    </ImageView>
+
+
+                </children>
+            </AnchorPane>
             <GridPane alignment="CENTER" hgap="15" prefHeight="220.0" prefWidth="438.0" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
@@ -69,6 +75,7 @@
                 <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
+                <PasswordField fx:id="txtPassword" promptText="Enter Password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                 <!-- Role -->
                 <Label text="Role:" GridPane.columnIndex="0" GridPane.rowIndex="3">
@@ -77,7 +84,6 @@
                 <TextField fx:id="txtRole" promptText="Enter Role" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <tooltip><Tooltip text="User role (e.g., Admin, User)" /></tooltip>
                 </TextField>
-            <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </GridPane>
 
             <!-- Right Side Placeholder -->
@@ -119,5 +125,9 @@
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
+      <stylesheets>
+         <URL value="@../css/Student.css" />
+         <URL value="@../css/ModernStyle.css" />
+      </stylesheets>
     </VBox>
 </AnchorPane>
